[gd_scene load_steps=2 format=3 uid="uid://dduyd15hmjp6l"]

[ext_resource type="Script" uid="uid://5nxib5obomgt" path="res://scripts/UI.gd" id="1_uikjL"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_uikjL")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level: 1"
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ready to record (10.0s remaining)"
autowrap_mode = 2

[node name="TimeBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="TutorialPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="TutorialLabel" type="RichTextLabel" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Tutorial text will appear here."
fit_content = true
